<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="notification_channel_name" translatable="false">Quick SMS</string>
    <string name="notification_channel_description" translatable="false">Quick SMS Notification Channel</string>

    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share to friends</string>
    <string name="action_rate">Rate Quick SMS</string>
    <string name="action_about">About</string>
    <string name="action_copy">Create a copy</string>
    <string name="action_history">History</string>
    <string name="to">To : %s</string>

    <string name="title_hint">Title</string>
    <string name="message_hint">Message</string>
    <string name="save">SAVE MESSAGE</string>
    <string name="max_recipients_warning">Maximum %s recipients per SMS</string>
    <string name="resend">Resend</string>
    <string name="sending">Sending...</string>

    <string name="confirm_delete_title">Delete this message?</string>
    <string name="confirm_sending">Send the message?</string>
    <string name="sending_failed">Failed to send SMS</string>
    <string name="sending_failed_info">Please make sure you have sufficient credit and SMS are enabled in this device.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>

    <string name="status_sending">Sending…</string>
    <string name="status_sent">{COUNT} sent</string>
    <string name="status_delivered">{COUNT} delivered</string>
    <string name="status_failed">{COUNT} failed</string>

    <string name="export_desc">Messages will be exported into your Download directory as a CSV file.</string>
    <string name="import_desc">All imported messages is simply treated as new messages.</string>
    <string name="export">Export</string>
    <string name="exporting">Exporting…</string>
    <string name="import_str">Import</string>
    <string name="importing">Importing…</string>
    <string name="import_error_io">Error opening the file!</string>
    <string name="import_error_format">Error importing file, please make sure the file has correct format.</string>
    <string name="import_success">Messages imported successfully.</string>
    <string name="export_error">Export failed!</string>
    <string name="export_success">Messages exported successfully. Please check your Download directory</string>
    <string name="permission_sms_granted">Thank you! now you can start sending SMS.</string>
    <string name="permission_sms_denied">Sorry, this app can not send SMS without permission granted by you.</string>
    <string name="permission_export_denied">Sorry, this app can not export messages without permission to write a file into your phone storage.</string>

    <string name="title_error">Title is required</string>
    <string name="number_error">Message should have at least one recipient</string>
    <string name="message_error">Message is required</string>
    <string name="message_saved">Message saved</string>
    <string name="message_deleted">Message deleted</string>
    <string name="message_copied">Message copied</string>
    <string name="tap_info">Tap and hold the message to send</string>
    <string name="add_recipient">+ ADD MORE RECIPIENT</string>
    <string name="enable_shortcut">Enable shortcut</string>
    <string name="unsaved_shortcut_warning">Cannot create shortcut for unsaved message</string>
    <string name="enable_shortcut_warning">Sorry! Can only enable maximum 4 shortcuts</string>

    <string name="pref_activity_title">Settings</string>
    <string name="pref_enable_beep_key" translatable="false">enable_beep</string>
    <string name="pref_enable_beep_title">Enable beep sound</string>
    <string name="pref_enable_beep_summary">An indicator SMS is sending</string>

    <string name="pref_sort_by_key" translatable="false">sort_by_key</string>
    <string name="pref_sort_by_title">Messages ordering</string>
    <string name="pref_sort_by_summary">Alphabetically</string>
    <string name="pref_sort_by_default_value" translatable="false">title</string>

    <string name="pref_sending_confirmation_key" translatable="false">sending_confirmation</string>
    <string name="pref_sending_confirmation_title">Sending confirmation</string>
    <string name="pref_sending_confirmation_summary">You\'ll be asked a confirmation before sending SMS</string>

    <string name="pref_enable_delivery_report_key" translatable="false">enable_delivery_report</string>
    <string name="pref_enable_delivery_report_title">Enable SMS delivery report</string>
    <string name="pref_enable_delivery_report_summary">Caution! Some provider will charge you additional cost for SMS delivery report</string>

    <string name="share_text">Create and send SMS template with Quick SMS. %s</string>
    <string name="about_1">%s Version %s.\n\nThis app is now an open source project.\nSource code: https://github.com/ekaputra07/quick-sms</string>
    <string name="about_2">Love this app? please rate us on Google Play, feedback and contribution are welcome.</string>
    <string name="title_activity_resend">Failed sending to these numbers</string>
    <string name="title_activity_export_import">Export / Import messages</string>
    <string name="title_activity_history">History</string>

</resources>
