<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_history" android:title="@string/action_history"
        android:orderInCategory="100" app:showAsAction="never"/>

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never"/>

    <item android:id="@+id/action_export_import" android:title="@string/title_activity_export_import"
        android:orderInCategory="100" app:showAsAction="never"/>

    <item android:id="@+id/action_rate" android:title="@string/action_rate"
        android:orderInCategory="100" app:showAsAction="never"/>

    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:orderInCategory="100" app:showAsAction="never"/>

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never"/>
</menu>
