<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/export_desc" />

    <Button
        android:id="@+id/btnExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="#00aad4"
        android:text="@string/export"
        android:textColor="#fff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/import_desc" />

    <Button
        android:id="@+id/btnImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00aad4"
        android:text="@string/import_str"
        android:textColor="#fff" />
</LinearLayout>