<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:id="@+id/smsFormFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false"
            android:layout_weight="1"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="15dp"
                android:layout_weight="1"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleTxt"
                    android:hint="@string/title_hint"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/messageTxt"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:hint="@string/message_hint" />

                <com.balicodes.quicksms.NoScrollListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/receiverListView"
                    android:layout_marginTop="30dp"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_recipient"
                    android:id="@+id/addReceiverBtn"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12dp"
                    android:background="@drawable/more_btn"
                    android:textColor="@color/more_color"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:layout_marginBottom="20dp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add shortcut to home screen "
                    android:id="@+id/addShortcut"
                    android:checked="false"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textSize="13dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveBtn"
        android:background="@drawable/rounded_corner_btn"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:layout_margin="3dp"/>
</LinearLayout>