<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="15dp"
              android:paddingRight="15dp"
              android:paddingTop="13dp"
              android:paddingBottom="15dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/smsTitleTxt"
            android:textSize="20dp"
            android:textColor="#000000"
            android:singleLine="true"
            android:layout_weight="2"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_chevron_right_black_24dp" />

        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/smsMessageTxt"
        android:textColor="#999"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sending..."
        android:id="@+id/smsStatusTxt"
        android:textColor="#999"
        android:singleLine="true"
        android:textSize="13dp"
        />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statusContainer"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_failed"
            android:id="@+id/statusFailed"
            android:singleLine="true"
            android:textSize="13dp"
            android:textColor="@color/red"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/statusFailed"
            android:text="@string/status_sent"
            android:id="@+id/statusSent"
            android:textColor="@color/green"
            android:singleLine="true"
            android:textSize="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/statusSent"
            android:text="@string/status_delivered"
            android:id="@+id/statusDelivered"
            android:textColor="@android:color/holo_blue_dark"
            android:singleLine="true"
            android:textSize="13dp"
            />
    </RelativeLayout>
</LinearLayout>